hard-gists/3b258f5287fcc181aacf/run.log
=== Docker Run Log for 3b258f5287fcc181aacf ===
Started at: Mi 29. Okt 14:11:14 CET 2025

[2025-10-29 14:11:15] START: Running container for 3b258f5287fcc181aacf
[2025-10-29 14:11:15] SUCCESS: Container 510ac51996c3c6e6290c952c0cd682914081dc3804e00f8c1f47e51dbf4f20ca started for 3b258f5287fcc181aacf
=== Container logs for 3b258f5287fcc181aacf ===
  File "/snippet.py", line 67
    print "Saved %d %ss" % (i, entity.kind())
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3b258f5287fcc181aacf ===
[2025-10-29 14:11:17] INFO: Container 510ac51996c3c6e6290c952c0cd682914081dc3804e00f8c1f47e51dbf4f20ca has stopped
